--- a/app/components/item-list.module.css
+++ b/app/components/item-list.module.css
@@ -15,7 +15,7 @@
   border-radius: 0.5rem;
   display: block;
   background-color: white;
-  border: 0.5rem solid var(--color-pink-50);
+  border: 0.5rem solid var(--color-gold-50);
   padding: 0.5rem;
 }
 
