--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 :root {
-  --color-pink-30: pink;
-  --color-pink-50: palevioletred;
+  --color-gold-30: gold;
+  --color-gold-50: goldenrod;
 }
 
 *,
