--- a/app/items/page.module.css
+++ b/app/items/page.module.css
@@ -1,15 +1,12 @@
-.header {
-  margin: 0;
-  text-align: center;
-}
-
 .form {
   background-color: var(--color-background);
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+  margin-inline: auto;
   padding: 1rem;
+  width: min(70ch, 100%);
 }
 
 .search-input {
