--- a/app/components/cat-list.module.css
+++ b/app/components/cat-list.module.css
@@ -1,25 +1,20 @@
-.item-list {
+.catList {
   display: grid;
-  gap: 2rem;
+  gap: 1rem;
   /* "The Grid" design pattern from "Every Layout" */
   grid-template-columns: repeat(auto-fit, minmax(min(15rem, 100%), 1fr));
   list-style: none;
   padding: 0;
 }
 
-.item-card {
-  aspect-ratio: 2/3;
+.catListItem {
   border-radius: 0.5rem;
-  display: block;
-  background-color: white;
-  border: 0.5rem solid var(--color-gold-50);
-  padding: 0.5rem;
+  overflow: hidden;
 }
 
-.item-image {
+.catListItemImage {
   aspect-ratio: 1/1;
-  background-color: gray;
   display: block;
   object-fit: cover;
-  object-position: center;
+  object-position: bottom;
 }
