--- a/app/components/cat-search-bar.module.css
+++ b/app/components/cat-search-bar.module.css
@@ -1,4 +1,5 @@
-.form {
+.catSearchBar {
+  align-items: center;
   background-color: var(--color-background);
   border-radius: 0.5rem;
   display: flex;
@@ -6,18 +7,18 @@
   gap: 0.75rem;
   margin-inline: auto;
   padding: 1rem;
-  width: min(70ch, 100%);
+  width: min(50ch, 100%);
 }
 
-.search-input {
-  border-radius: 0.5rem;
-  padding: 0.5rem;
+.catSearchBarInput,
+.catSearchBarSelect {
+  width: 100%;
 }
 
-.submit-button {
+.catSearchBarButton {
   background-color: var(--color-primary);
-  border-radius: 0.5rem;
+  display: block;
   color: white;
-  font-weight: 700;
   padding: 0.5rem;
+  width: max-content;
 }
