--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -1,30 +1,7 @@
-.html,
-.body {
-  margin: 0;
-  min-height: 100vh;
-  padding: 0;
-}
-
-.body {
+.main {
   display: flex;
   flex-direction: column;
-}
-
-.main {
-  background-color: var(--color-gold-30);
-  padding: 2rem;
-  flex: 1;
-}
-
-.header,
-.footer {
-  background-color: var(--color-gold-50);
-  flex-shrink: 0;
-  padding: 2rem;
-}
-
-.header {
-  display: flex;
   justify-content: center;
-  margin: 0;
+  margin-inline: auto;
+  width: min(70ch, 100%);
 }
